# DS210Project

./: Cargo.toml  README.md  calculations.rs  data_processing.rs  diminishing.rs  graph.dot  graph_analysis.rs  interactive.rs  lib.rs  main.rs  modules  petgraph_vis.rs  savingcode  state_comparison.rs  test_calculations.rs  test_data_processing.rs  visualization.rs
mass_incarceration_analysis/: DS210FinalWRITEUP
mass_incarceration_analysis/src/: diminishing.rs  graph_analysis.rs  main.rs  national.rs  nonlinear.rs  petgraph_vis.rs
mass_incarceration_analysis/tests/: test_calculations.rs  test_data_processing.rs
src/: lib.rs  main.rs  nonlinear.rs  visualization.rs
src/src/: calculations.rs  main.rs  petgraph_vis.rs  savingcode  visualization.rs
