[package]
name = "mass_incarceration_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3"                            # CSV handling
petgraph = "0.6"                       # Graph algorithms
ndarray = "0.16.1"                     # Numerical operations
ndarray-linalg = { version = "0.16.0" }# Linear algebra for ndarray
plotters = { version = "0.3" }         # Visualization
polars = { version = "0.40.0", features = ["lazy", "csv"] } # Stable version of Polars
serde = { version = "1.0", features = ["derive"] }          # Serialization and deserialization
rand = "0.8"                           # Random number generation
rand_distr = "0.4" 
nalgebra = "0.32.1" 
plotly = "0.11"
statrs = "0.16"